better initial setup
